kubernetes/platform/observability/grafana-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: external-gateway
    namespace: default
  hostnames:
  - "grafana.techtalkswithanant.online"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: observability-stack-grafana
      port: 80
